--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -6,3 +6,8 @@
     width: 50px;
     border-radius: 50px;
 }
+.dialog{
+    display: flex;
+    flex-direction: column;
+    background-color: lightblue;
+}
