--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,3 +6,11 @@
     width: 50px;
     border-radius: 50px;
 }
+.loginBlock{
+    float: right;
+
+}
+.loginBlock a{
+    color: white;
+    text-decoration: none;
+}
